# DevLog

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_devlog.sh  test_week1.py
core/: git_hooks.py  git_ops.py
devlog/: __main__.py  llm.py  paths.py
devlog/analysis/: analyzer.py  chat_manager.py  compare.py  compare_commits.py  conversation_db.py  enhanced_chat_manager.py  llm.py  review.py  smart_router.py  tool_registry.py  tool_router.py
devlog/cli/: chat_tui.py  tui.py  updated_chat_tui.py
devlog/core/: code_extract.py  db.py  db_migration.py  deep_search.py  embeddings.py  git_hooks.py  git_ops.py  search.py  search_unified.py  tags.py
devlog/export/: report_generator.py
devlog/ingestion/: chunk_exam.py  docx.py  ingest_file.py  markdown.py  normalize.py  pdf.py  plaintext.py  pptx.py  title_extractor.py
devlog/search/: content_extractor.py  scraper.py  web_search.py
